tests/builtin_collision_const_allocator_bad.hop
// Verifies top-level const declarations cannot collide with public builtin types.
const MemAllocator = 1
